--- a/nachos-4.0/code/Makefile.common
+++ b/nachos-4.0/code/Makefile.common
@@ -25,7 +25,7 @@
 # All rights reserved.  See copyright.h for copyright notice and limitation 
 # of liability and disclaimer of warranty provisions.
 
-CFLAGS = -g -Wall -fwritable-strings $(INCPATH) $(DEFINES) $(HOST) -DCHANGED
+CFLAGS = -g -Wall $(INCPATH) $(DEFINES) $(HOST) -DCHANGED
 LDFLAGS =
 
 # These definitions may change as the software is updated.
